src/test/ui/bind-by-move/bind-by-move-neither-can-live-while-the-other-survives-4.stderr
error[E0009]: cannot bind by-move and by-ref in the same pattern
  --> $DIR/bind-by-move-neither-can-live-while-the-other-survives-4.rs:12:15
   |
LL |         Some((_y, ref _z)) => { },
   |               ^^  ------ both by-ref and by-move used
   |               |
   |               by-move pattern here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0009`.
